Fix popover overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,7 +31,7 @@
     }
 }
 
-.known-exploit-popover, .cve-list-page-header-popover {
+.known-exploit-popover {
     .pf-c-popover__content {
         width: 380px;
     }
